# upenn-cis194

./: README.md
assignment1/: assignment1.cabal  package.yaml  stack.yaml
assignment1/src/: Hanoi.hs  Validate.hs
assignment1/test/: HanoiSpec.hs  ValidateSpec.hs
assignment10/: README.md  assignment10.cabal
assignment10/src/: AParser.hs
assignment10/test/: AParserSpec.hs
assignment11/: README.md  assignment11.cabal
assignment11/src/: SExpr.hs
assignment11/test/: SExprSpec.hs
assignment12/: README.md  assignment12.cabal
assignment12/src/: Risk.hs
assignment12/test/: RiskSpec.hs
assignment2/: assignment2.cabal  package.yaml
assignment2/src/: Log.hs
assignment2/test/: LogSpec.hs
assignment3/: README.md  assignment3.cabal
assignment3/src/: Golf.hs
assignment3/test/: GolfSpec.hs
assignment4/: README.md  assignment4.cabal
assignment4/src/: MoreFolds.hs  Sundaram.hs  TreeFolds.hs  Wholemeal.hs
assignment4/test/: MoreFoldsSpec.hs  SundaramSpec.hs  TreeFoldsSpec.hs  WholemealSpec.hs
assignment5/: README.md  assignment5.cabal
assignment5/src/: Calculator.hs  Vars.hs
assignment5/test/: CalculatorSpec.hs
assignment6/: README.md  assignment6.cabal
assignment6/src/: Fib.hs  Streams.hs
assignment6/test/: FibSpec.hs  StreamsSpec.hs
assignment7/: README.md  assignment7.cabal
assignment7/src/: EditorBuffer.hs  JoinList.hs  Scrabble.hs  Sized.hs
assignment7/test/: EditorBufferSpec.hs  JoinListSpec.hs  ScrabbleSpec.hs  SizedSpec.hs
assignment8/: README.md  assignment8.cabal
assignment8/src/: Party.hs
assignment8/test/: PartySpec.hs
