name:                assignment10
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/assignment10#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AParser
  build-depends:       QuickCheck >= 2.13.2,
                       base >= 4.7 && < 5,
                       hspec >= 2.7.1
  default-language:    Haskell2010

test-suite assignment10-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , QuickCheck >= 2.13.2
                     , assignment10
                     , base
                     , hspec
                     , hspec >= 2.7.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       AParserSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/assignment10
